--- a/Who.css
+++ b/Who.css
@@ -21,7 +21,7 @@ h1 {
 
 #Home {
     margin-top: 12px;
-    margin-left: 110px;
+    margin-left: -600px;
   }
 
   #Home:hover {
@@ -31,7 +31,7 @@ h1 {
 .logo img {
     width: 100px;
     height: 100px;
-    position: absolute;
+    
     margin-top: -210px;
     margin-left: 590px;
 }
@@ -39,7 +39,7 @@ h1 {
 .GusMessage img {
     width: 440px;
     height: 260px;
-    position: absolute;
+    
     margin-top: -260px;
     
     border: 1px solid black;
@@ -60,7 +60,7 @@ h1 {
 }
 
 .GusMessage {
-    position: absolute;
+    width: 440px;
     margin-top: 300px;
     margin-left: 150px;
     
@@ -92,10 +92,10 @@ h1 {
 }
 
 .About {
-    position: absolute;
-    margin-top: 300px;
-    margin-left: 630px;
     
+    margin-top: -215px;
+    margin-left: 630px;
+    width: 440px;
     border: 1px solid black;
    
    
@@ -113,7 +113,7 @@ h1 {
 .About img {
     width: 440px;
     height: 260px;
-    position: absolute;
+  
     margin-top: -260px;
     
     border: 1px solid black;
@@ -124,8 +124,9 @@ h1 {
 }
 
 video {
-    position: absolute;
-    margin-left: 310px;
+    
+    display: block;
+    margin: auto;
     border: 2px solid black;
    
    
@@ -135,23 +136,10 @@ video {
     font-size: 28px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-    margin-top: 390px;
+    
     text-align: center;
     text-shadow: 1px 1px 1px black;
     color: #F20530;
     
 }
 
-button {
-    position: absolute;
-    width: 100px;
-    height: 50px;
-    background-color: #F20530;
-    margin-left: 40px;
-    margin-top: -100px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
-    border: 2px solid black;
-    border-radius: 10px;
-    box-shadow: 2px 2px 2px black;
-}
