--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -12,6 +12,9 @@ h3 {
   font-weight: 400;
   font-style: normal;
 }
+h5{ font-family: "Goblin One", serif;
+  font-weight: 400;
+  font-style: normal;}
 p {
   font-family: "Lato", serif;
   font-weight: 400;
@@ -20,6 +23,11 @@ p {
 a {
   font-family: "Lato", serif;
   font-weight: 600;
+  font-style: normal;
+}
+button{
+  font-family: "Lato", serif;
+  font-weight: 700;
   font-style: normal;
 }
 /* ---------------------------------------------------- */
@@ -101,7 +109,7 @@ a {
 .page-container {
   display: flex;
   width: 100%;
-  height: 700px;
+  height: 800px;
   gap: 2%;
 }
 /* -------------------------------- */
@@ -204,7 +212,7 @@ a {
 .Payment-Info-Container {
   display: flex;
   background-color: hsl(0, 0%, 95%);
-  padding: 2%;
+  padding: 1.5%;
   width: 60%;
 }
 .Payment-Info-Content {
@@ -213,10 +221,24 @@ a {
   width: 100%;
   gap: 25px;
 }
-.nameEmail-Container{
+.name-Container{
+  display: flex;
+  flex-direction: row;
+  gap:20px;
+}
+.Contact-Info-Content, .optionalTip-container,.PaymentMethod-Container{
   display: flex;
   flex-direction: column;
-  row-gap:20px;
+  row-gap: 20px;}
+
+.Name, #Email, #CardName, #CardNumber,#CVV, #ExpDate{
+  border-radius: 10px;
+  padding:0.8%;
+  border:none;
+  background-color: hsl(0, 0%, 90%);
+  height:100%;
+
+  
 }
 .tipbtncontainer{
   display: flex;
@@ -247,9 +269,14 @@ a {
   display: flex;
   flex-direction: column;
 }
+.Card-Cont{
+  display:flex;
+  flex-direction: row;
+  gap:20px;
+}
 .Exp-Cvv-Container {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   column-gap: 20px;
 }
 .Exp-Cvv-Container input {
