--- a/catering.css
+++ b/catering.css
@@ -34,12 +34,47 @@ html {
 
 body {
 	height: 100vh;
-	background-color: var(--warm-yellow);
+	background-color: whitesmoke;
 }
 
 /* -------------------------------------------------------------------------- */
 /*                                Page Navigation                               */
 /* -------------------------------------------------------------------------- */
+
+/* ----------------------------------- CTA ---------------------------------- */
+.cta {
+	display: flex;
+	place-content: center;
+	/* margin-top: 20px;
+	margin-bottom: 20px; */
+	background-image: url('media/Header2.jpg');
+	background-position: 0 50%;
+	background-size: cover;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.cta img {
+	width: 500px;
+	height: 300px;
+	object-fit: fit;
+	border-radius: 10px;
+}
+/* 
+.cta span {
+	font-family: 'Arvo', serif;
+	font-size: 40px;
+	place-content: center;
+	transform: translateX(80px);
+	transform: translateY(50px);
+	text-transform: uppercase;
+	-webkit-text-stroke-width: 1.5px;
+	-webkit-text-stroke-color: black;
+	font-weight: 900;
+	z-index: 99;
+} */
+
+/* -------------------------------- CTA end -------------------------------- */
 
 #logo {
 	width: 100px;
@@ -93,13 +128,39 @@ body {
 	/* z-index: 99; */
 	top: 0;
 	width: 100%;
-	background-color: var(--main-red);
+	/* background-color: #5d9bd3; */
+	background-color: var(--secondary-red);
 	color: white;
 }
 
 .menu-nav a {
+	/* background-color: #edebed; */
+	/* color: #1f4e95; */
+	color: white;
+	padding: 10px 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.menu-nav a:hover {
+	border-bottom: 3px solid white;
+	transition: 0.3s;
+}
+
+.menu-nav a {
 	text-decoration: none;
-	color: inherit;
+}
+
+.location-button {
+	display: block;
+	color: white;
+	/* font-family: 'Arvo', serif;
+	font-weight: 200;
+	text-transform: uppercase; */
+}
+
+ion-icon {
+	font-size: 20px;
 }
 
 .menu-nav li {
@@ -134,56 +195,81 @@ body {
 .section-title {
 	text-transform: uppercase;
 	display: flex;
+	margin-top: 0.5%;
 	justify-content: center;
+	font-size: 30px;
+	font-family: 'Arvo', serif;
+	color: #ff4742;
+	font-weight: 800;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #761512;
+	/* color: var(--main-red);
+	-webkit-text-stroke-width: 1.5px;
+	-webkit-text-stroke-color: black; */
+}
+
+.catering-title {
+	text-transform: capitalize;
 	color: white;
 	font-size: 40px;
-	font-family: 'Arvo', serif;
-	color: var(--main-red);
-	-webkit-text-stroke-width: 1.5px;
-	-webkit-text-stroke-color: black;
+	font-weight: 500;
+	font-family: 'Montserrat', serif;
+	color: #333;
 }
-/* 
-.title-style {
-    background-image: url(/media/zigzag.svg);
-    background-position: 0 20%;
-    background-repeat: repeat-x;
-} */
+
+.price {
+	font-weight: 300;
+}
+
+.menu-heading p {
+	color: rgb(109, 109, 109);
+}
+
+.menu-heading {
+	display: flex;
+	flex-direction: column;
+	place-content: center;
+	transform: translatey(100%);
+	margin-left: 10%;
+}
+
+.menu-heading a {
+	color: #ff4742;
+	font-weight: 400;
+	text-decoration: none;
+}
 
 .title-style {
-	display: block;
-	transform: translatey(200%);
-}
-
-#tenders img[src^='media/chicken-tenders.webp'] {
-	height: 5rem;
-}
-
-#apple img[src^='media/applepie.png'] {
-	height: 7rem;
+	display: flex;
+	justify-content: left;
+	margin-left: 10%;
+	transform: translatey(300%);
 }
 
 .items-container {
-	display: flex;
-	flex: 2;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 7%;
-	/* background-color: rgb(155, 35, 35); */
-	background-color: var(--warm-yellow);
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 2rem;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	margin-top: 10%;
+}
+
+.card-bottom {
+	padding-bottom: 3rem;
 }
 
 .item-card {
-	padding: 10px;
-	width: 20em;
-	height: 10em;
-	margin: 20px;
+	display: flex;
+	flex-direction: row;
+	background-color: white;
 	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	overflow: hidden;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s ease;
-	background-color: #fff;
-	/* font-family: "Montserrat", sans-serif; */
-	font-family: 'Quicksand', serif;
+	/* width: 30rem; */
+	width: 90%;
+	height: 13rem;
+	margin-right: 5rem;
 }
 
 .item-card:hover {
@@ -191,62 +277,59 @@ body {
 	transform: scale(1.05);
 }
 
-.item-info {
-	display: flex;
-	flex-direction: column;
-	margin-top: 0.5em;
-}
-
-.menu-add {
-	margin-top: 2.5em;
-	margin-left: 3em;
-	font-family: 'Arvo', serif;
-	background-color: yellow;
-	border-style: 1px solid black !important;
-}
-
-.btn:hover {
+.order-btn {
+	margin-top: 15px;
+	background-color: #666;
+	width: 100px;
+	display: block;
+	position: absolute;
+	/* transform: translateY(220%); */
+	background: #ff4742;
+	border: 1px solid #ff4742;
+	border-radius: 6px;
+	box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+	color: #ffffff;
 	cursor: pointer;
-	/* transform: scale(1.05); */
+	font-family: 'Monsterrat', sans-serif;
+	font-size: 12px;
+	font-weight: 800;
+	min-height: 40px;
+	padding: 12px 14px;
+	text-align: center;
 }
 
-.price {
-	margin-top: 1em;
-	margin-left: 0.5em;
-	transform: translateY(-15%);
+.order-btn:hover {
+	background: #cd3530;
+	transition: 0.2s;
+}
+
+.item-info {
+	margin-top: 2rem;
+	margin-left: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 280px;
+	font-family: 'Montserrat', serif;
+	font-size: 1rem;
+}
+.item-info img {
+	height: 5rem;
+	width: 5rem;
+}
+
+.item-info p {
+	color: #737272;
+	line-height: 1.2;
+	margin-top: 0.5rem;
+}
+
+.item-header {
+	font-weight: 600;
 }
 
 .item-description {
-	color: var(--light-grey);
-	max-width: 250px;
-	overflow: hidden;
-	font-size: 14px;
-	text-wrap: wrap;
-}
-
-.item-img {
-	float: right;
-	transform: translatey(-120%);
-}
-
-.item-img img {
-	height: 120px;
-	width: auto;
-	object-fit: fit;
-}
-
-.item-img img[src^='media/huevosrancheros.png'] {
-	height: 2px;
-}
-
-.item-info {
-	display: flex;
-}
-
-.btn {
-	padding: 10px;
-	border-radius: 6px;
-	/* border-style:  none; */
+	font-size: 13px;
 }
 
 /* -------------------------------- backtotop ------------------------------- */
@@ -271,6 +354,11 @@ body {
 
 #topBtn:hover {
 	background-color: rgb(154, 8, 8);
+}
+
+.left {
+	width: 30%;
+	background-color: red;
 }
 
 /* -------------------------------------------------------------------------- */
