--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -109,7 +109,7 @@ button{
 .page-container {
   display: flex;
   width: 100%;
-  height: 800px;
+  height: 855px;
   gap: 2%;
 }
 /* -------------------------------- */
@@ -230,7 +230,7 @@ button{
   flex-direction: column;
   row-gap: 20px;}
 
-.Name, #Email, #CardName, #CardNumber,#CVV, #ExpDate{
+.Name, #Email, #CardName, #CardNumber,#CVV, #ExpDate, #CouponID{
   border-radius: 10px;
   padding:0.8%;
   border:none;
@@ -244,7 +244,7 @@ button{
   flex-direction: row;
   gap:5%;
 }
-.tip-btn{
+.tip-btn, .CouponSubmit{
   display: flex;
   justify-content: center;
   padding:1%;
@@ -253,11 +253,24 @@ button{
   background-color: #f2e205;
   border-radius: 20px; 
 }
-.tip-btn:hover{
+.tip-btn:hover,.CouponSubmit:hover{
   transform: translateY(-2px);
   background-color: hsl(56, 96%, 58%);
   box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
   transition: all 0.7s;
+}
+.Couponcontainer{
+  display:flex;
+  flex-direction: column;
+  width:40%;
+  row-gap:20px;
+}
+.CouponEnterSection{
+  display: flex;
+  gap:2%;
+}
+.CouponEnterSection .CouponSubmit{
+  width:20%;
 }
 .PaymentMethod-Container {
   display: flex;
@@ -278,7 +291,7 @@ button{
   /* justify-content: center; */
   column-gap: 20px;
 }
-.Exp-Cvv-Container input {
+.Exp-Cvv-Container input{
   width: 50%;
 }
 .Exp {
