--- a/catering-form.css
+++ b/catering-form.css
@@ -39,6 +39,11 @@ body {
 	box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.3);
 }
 
+.cta-inner a {
+	text-decoration: none;
+	color: inherit;
+}
+
 .cta-inner button:hover {
 	cursor: pointer;
 	background-color: white;
@@ -277,6 +282,15 @@ select:focus {
 	height: 300px;
 	object-fit: fit;
 	border-radius: 10px;
+}
+
+.form-group textarea {
+	resize: none;
+	width: 60rem;
+	height: 10rem;
+	border-color: #dddddd;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
 }
 
 .form-button {
