--- a/receipt.css
+++ b/receipt.css
@@ -1,7 +1,7 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
@@ -16,247 +16,266 @@ body {
   line-height: 1.6;
 }
 
-:root { 
---dark-blue: #021F59;
---teal: #05C7F2;
---warm-blue: #4aa3e3;
---main-red: #F20519;
---secondary-red: #F20530;
---main-yellow: #F2E205;
---warm-yellow : #f0af02;
---light-grey: #666;
---accent-orange: #ff7043;
---background-white: #f4f4f4;
-
-}
-
-
 /* -------------------------------------------------------------------------- */
 /*                                 Navigation                                 */
 /* -------------------------------------------------------------------------- */
 
-#logo{
-  width:100px
+#logo {
+	width: 100px;
 }
-.header{
-  display: flex;
-  flex-direction: row;
-  background-color: #d71d3f;
-  flex-wrap: wrap;
-  width:100%;
-  justify-content: space-around;
-  /* position: fixed; */
-  /* z-index: 99; */
-  transition: top 0.3s;
+.header {
+	display: flex;
+	flex-direction: row;
+	background-color: #d71d3f;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-around;
+	/* position: fixed; */
+	/* z-index: 99; */
+	transition: top 0.3s;
+}
+.header a {
+	color: white;
+	text-decoration: none;
+}
+.userNav,
+.nav,
+.logo {
+	display: flex;
+	width: 20%;
+	align-items: center;
+	gap: 20px;
+}
+#UserProf {
+	font-size: 30px;
+}
+.btnLink {
+	color: hsl(0, 0%, 0%);
+	background-color: #f2e205;
+	border-radius: 10px;
+	width: 100px;
+	height: 40px;
+	padding: 2%;
+}
 
-}
-.header a{
-  color:white;
-  text-decoration: none;
-}
-.userNav,.nav,.logo{
-  display: flex;
-  width:20%;
-  align-items: center;
-  gap:20px
-}
-#UserProf{
-  font-size:30px;
-}
-.btnLink{
-  color:hsl(0, 0%, 0%);
-  background-color: #F2E205;
-  border-radius: 10px;
-  width:100px;
-  height: 40px;
-  padding:2%;
-}
-
-.logo-small img { 
-  max-width: 10rem;
-  max-height: 10rem;
+.logo-small img {
+	max-width: 10rem;
+	max-height: 10rem;
 }
 
 .logo-small {
-  display: flex;
-  place-content: center;
+	display: flex;
+	place-content: center;
 }
-
 
 /* -------------------------------------------------------------------------- */
 /*                                   Receipt                                  */
 /* -------------------------------------------------------------------------- */
 
-
 .receipt-container {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+	max-width: 900px;
+	margin: 40px auto;
+	padding: 20px;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
 }
 
 header {
-  text-align: center;
-  margin-bottom: 20px;
-  margin-top: 40px;
+	text-align: center;
+	margin-bottom: 20px;
+	margin-top: 40px;
 }
 
 header h1 {
-  font-size: 2.5rem;
-  color: var(--secondary-red);
-  font-family: "Roboto", serif;
-  font-weight: 800;
+	font-size: 2.5rem;
+	color: var(--secondary-red);
+	font-family: 'Roboto', serif;
+	font-weight: 800;
 }
 
 header p {
-  font-size: 1.2rem;
-  color: #555;
+	font-size: 1.2rem;
+	color: #555;
 }
-
 
 /* -------------------------------------------------------------------------- */
 /*                                Progress Bar                                */
 /* -------------------------------------------------------------------------- */
 .order-status {
-  margin-bottom: 30px;
-  text-align: center;
+	margin-bottom: 30px;
+	text-align: center;
 }
 
 .order-status h2 {
-  font-size: 1.5rem;
-  color: var(--secondary-red);
-  margin-bottom: 15px;
-  font-weight: 600;
+	font-size: 1.5rem;
+	color: var(--secondary-red);
+	margin-bottom: 15px;
+	font-weight: 600;
 }
 
 .progress-bar {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  margin-bottom: 20px;
-  width: 100%;
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+	margin-bottom: 20px;
+	width: 100%;
 }
 
 .progress-step {
-  position: relative;
-  flex: 1;
-  height: 10px;
-  padding: 15px;
-  background-color: #ddd;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 0.8rem;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
+	position: relative;
+	flex: 1;
+	height: 10px;
+	padding: 15px;
+	background-color: #ddd;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: white;
+	font-size: 0.8rem;
+	font-weight: 600;
+	transition: background-color 0.3s ease;
 }
 
 .progress-step.active {
-  background-color: var(--warm-yellow);
+	background-color: var(--warm-yellow);
 }
 
 .progress-step.completed {
-  background-color: #4caf50;
+	background-color: #4caf50;
 }
 
 .progress-step:last-child {
-  position: relative;
+	position: relative;
 }
 
 .progress-step:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 100%;
-  width: 10px;
-  height: 10px;
-  color: var(--secondary-red);
-  border-radius: 50%;
-  transform: translateY(-50%);
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 100%;
+	width: 10px;
+	height: 10px;
+	color: var(--secondary-red);
+	border-radius: 50%;
+	transform: translateY(-50%);
 }
 
 .progress-step.active:after {
-  background-color: var(--warm-yellow);
+	background-color: var(--warm-yellow);
 }
 
 /* Main Content Styles */
 section {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 h2 {
-  font-size: 1.5rem;
-  color: var(--secondary-red);
-  margin-bottom: 10px;
-  font-weight: 600;
+	font-size: 1.5rem;
+	color: var(--secondary-red);
+	margin-bottom: 10px;
+	font-weight: 600;
 }
 
 .order-summary p,
 .items p,
 .totals p {
-  font-size: 1.2rem;
-  margin-bottom: 8px;
+	font-size: 1.2rem;
+	margin-bottom: 8px;
 }
 
 .items .item-list {
-  list-style-type: none;
-  padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
 
 .items .item-list li {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0;
-  border-bottom: 1px solid #eee;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0;
+	border-bottom: 1px solid #eee;
 }
 
 .items .item-list li:last-child {
-  border-bottom: none;
+	border-bottom: none;
 }
 
 .total-row {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0;
 }
 
 .total-row p {
-  font-size: 1.2rem;
-  color: #333;
+	font-size: 1.2rem;
+	color: #333;
 }
 
 .total-row p strong {
-  font-weight: bold;
-  font-size: 1.4rem;
-  color: #000;
+	font-weight: bold;
+	font-size: 1.4rem;
+	color: #000;
 }
 
 footer {
-  text-align: center;
+	text-align: center;
 }
 
 .cta {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
 }
 
 .cta-button {
-  padding: 12px 25px;
-  background-color: var(--secondary-red);
-  color: white;
-  text-decoration: none;
-  border-radius: 30px;
-  font-weight: 600;
-  text-align: center;
-  transition: background-color 0.3s ease;
+	padding: 12px 25px;
+	background-color: var(--secondary-red);
+	color: white;
+	text-decoration: none;
+	border-radius: 30px;
+	font-weight: 600;
+	text-align: center;
+	transition: background-color 0.3s ease;
 }
 
 .cta-button:hover {
-  background-color: #ba0425;
+	background-color: #ba0425;
 }
 
+/* ---------------------------------------------------- */
+/* ------               Footer Section       ---------- */
+/* ---------------------------------------------------- */
+footer a {
+	color: hsl(100, 100%, 100%);
+	text-decoration: none;
+}
+footer ion-icon {
+	font-size: 30px;
+	color: hsl(349, 96%, 28%);
+}
+.footer-container {
+	display: flex;
+	overflow: hidden;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: hsl(349, 96%, 44%);
+	height: 200px;
+	position: relative;
+}
+.about {
+	display: flex;
+	gap: 20px;
+}
+.icon-footer {
+	display: flex;
+	gap: 20px;
+}
+
+.copyright {
+	display: block;
+	width: 30%;
+	text-wrap: wrap;
+	text-align: center;
+	color: #850e19;
+}
