--- a/MenuPage.css
+++ b/MenuPage.css
@@ -23,18 +23,9 @@ html {
 	--light-grey: #666;
 }
 
-.menu-body {
-	/* display: flex;
-	flex-direction: column;
-	justify-content: center;
-	width: 100vh;
-	align-items: center; */
-	overflow: auto;
-}
-
 body {
 	height: 100vh;
-	background-color: var(--warm-yellow);
+	background-color: whitesmoke;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -146,16 +137,41 @@ body {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 	place-content: center;
-	/* z-index: 99; */
+	z-index: 1000;
 	top: 0;
 	width: 100%;
-	background-color: var(--main-red);
+	background-color: var(--secondary-red);
 	color: white;
+	position: sticky;
+	top: 0;
+}
+
+.menu-nav a {
+	color: white;
+	padding: 10px 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.menu-nav a:hover {
+	border-bottom: 3px solid white;
+	transition: 0.3s;
 }
 
 .menu-nav a {
 	text-decoration: none;
-	color: inherit;
+}
+
+.location-button {
+	display: block;
+	color: white;
+	/* font-family: 'Arvo', serif;
+	font-weight: 200;
+	text-transform: uppercase; */
+}
+
+ion-icon {
+	font-size: 20px;
 }
 
 .menu-nav li {
@@ -182,7 +198,6 @@ body {
 	cursor: pointer;
 	margin-left: -20px;
 }
-
 /* -------------------------------------------------------------------------- */
 /*                                 Card Styles                                */
 /* -------------------------------------------------------------------------- */
@@ -190,24 +205,33 @@ body {
 .section-title {
 	text-transform: uppercase;
 	display: flex;
+	margin-top: 0.5%;
 	justify-content: center;
-	color: white;
 	font-size: 40px;
 	font-family: 'Arvo', serif;
+	/* color: #ff4742; */
+	font-weight: 900;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #761512;
 	color: var(--main-red);
-	-webkit-text-stroke-width: 1.5px;
-	-webkit-text-stroke-color: black;
 }
-/* 
-  .title-style {
+
+/* .title-style {
+	content: '';
 	background-image: url(/media/zigzag.svg);
-	background-position: 0 20%;
+	background-position: 0 200%;
 	background-repeat: repeat-x;
-  } */
+	background-size: contain;
+	width: fit-content;
+} */
 
 .title-style {
-	display: block;
-	transform: translatey(200%);
+	/* display: block;
+	transform: translatey(200%); */
+	display: flex;
+	justify-content: left;
+	margin-left: 11%;
+	transform: translatey(220%);
 }
 
 #tenders img[src^='media/chicken-tenders.webp'] {
@@ -219,27 +243,30 @@ body {
 }
 
 .items-container {
-	display: flex;
-	flex: 2;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 7%;
-	/* background-color: rgb(155, 35, 35); */
-	background-color: #fdea41;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 2rem;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	margin-top: 10%;
+	padding-bottom: 1rem;
+}
+
+.card-bottom {
+	padding-bottom: 3rem;
 }
 
 .item-card {
-	padding: 10px;
-	width: 30em;
-	height: 10em;
-	margin: 20px;
+	display: flex;
+	flex-direction: row;
+	background-color: white;
+	padding-left: 10px;
 	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	overflow: hidden;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s ease;
-	background-color: #fff;
-	/* font-family: "Montserrat", sans-serif; */
-	font-family: 'Quicksand', serif;
+	width: 90%;
+	height: 13rem;
+	margin-right: 5rem;
 }
 
 .item-card:hover {
@@ -247,63 +274,68 @@ body {
 	transform: scale(1.05);
 }
 
-.item-info {
-	display: flex;
-	flex-direction: column;
-	margin-top: 0.5em;
-}
-
 .menu-add {
-	margin-top: 2.5em;
-	margin-left: 3em;
-	font-family: 'Arvo', serif;
-	background-color: yellow;
-	border-style: 1px solid black !important;
-}
-
-.btn:hover {
+	margin-top: 15px;
+	background-color: #666;
+	width: 100px;
+	display: block;
+	position: absolute;
+	/* transform: translateY(220%); */
+	background: var(--main-red);
+	border: 1px solid var(--main-red);
+	border-radius: 6px;
+	box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+	color: #ffffff;
 	cursor: pointer;
-	/* transform: scale(1.05); */
+	font-family: 'Monsterrat', sans-serif;
+	font-size: 12px;
+	font-weight: 800;
+	min-height: 40px;
+	padding: 12px 14px;
+	text-align: center;
 }
 
-.price {
-	margin-top: 1em;
-	margin-left: 0.5em;
-	transform: translateY(-15%);
+.menu-add:hover {
+	background: #cd3530;
+	transition: 0.2s;
+}
+
+.item-info {
+	margin-top: 2rem;
+	margin-left: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 280px;
+	font-family: 'Montserrat', serif;
+	font-size: 1rem;
+}
+.item-card img {
+	margin-top: 15px;
+	padding-top: 5px;
+	height: 10rem;
+	width: 10rem;
+	object-fit: contain;
+}
+
+.item-info p {
+	color: #737272;
+	line-height: 1.2;
+	margin-top: 0.5rem;
+}
+
+.item-header {
+	font-weight: 600;
 }
 
 .item-description {
-	color: var(--light-grey);
-	max-width: 250px;
-	overflow: hidden;
-	font-size: 14px;
-	text-wrap: wrap;
+	font-size: 13px;
 }
 
-.item-img {
-	float: right;
-	transform: translatey(-120%);
-}
-
-.item-img img {
-	height: 120px;
-	width: auto;
-	object-fit: fit;
-}
-
-.item-img img[src^='LosPollosImages-gif/huevosrancheros.png'] {
-	height: 2px;
-}
-
-.item-info {
-	display: flex;
-}
-
-.btn {
-	padding: 10px;
-	border-radius: 6px;
-	/* border-style:  none; */
-}
+/* #desserts img[src='media/applepie.png'] {
+	height: 300px;
+	object-fit: contain;
+} */
 
 /* -------------------------------- backtotop ------------------------------- */
 #topBtn {
@@ -434,4 +466,42 @@ option:value {
 	padding: 3%;
 	border: none;
 	border-radius: 20px;
+}
+
+/* ---------------------------------------------------- */
+/* ------               Footer Section       ---------- */
+/* ---------------------------------------------------- */
+footer a {
+	color: hsl(100, 100%, 100%);
+	text-decoration: none;
+}
+footer ion-icon {
+	font-size: 30px;
+	color: hsl(349, 96%, 28%);
+}
+.footer-container {
+	display: flex;
+	overflow: hidden;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: hsl(349, 96%, 44%);
+	height: 200px;
+	position: relative;
+	margin-top: 5rem;
+}
+.about {
+	display: flex;
+	gap: 20px;
+}
+.icon-footer {
+	display: flex;
+	gap: 20px;
+}
+
+.copyright {
+	display: block;
+	width: 30%;
+	text-wrap: wrap;
+	text-align: center;
+	color: #850e19;
 }
