--- a/catering.css
+++ b/catering.css
@@ -16,20 +16,11 @@ html {
 	--dark-blue: #021f59;
 	--teal: #05c7f2;
 	--warm-blue: #4aa3e3;
-	--main-red: #f20519;
+	--main-red: #f2022f;
 	--secondary-red: #f20530;
 	--main-yellow: #f2e205;
 	--warm-yellow: #f0af02;
 	--light-grey: #666;
-}
-
-.menu-body {
-	/* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100vh;
-    align-items: center; */
-	overflow: auto;
 }
 
 body {
@@ -127,6 +118,7 @@ body {
 .cta-inner p {
 	font-size: 5.5rem;
 	font-weight: 800;
+	transform: translateY(5rem);
 	color: white;
 	-webkit-text-stroke: 3px #f2022f;
 }
@@ -215,17 +207,16 @@ body {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 	place-content: center;
-	/* z-index: 99; */
+	z-index: 1000;
 	top: 0;
 	width: 100%;
-	/* background-color: #5d9bd3; */
 	background-color: var(--secondary-red);
 	color: white;
+	position: sticky;
+	top: 0;
 }
 
 .menu-nav a {
-	/* background-color: #edebed; */
-	/* color: #1f4e95; */
 	color: white;
 	padding: 10px 15px;
 	padding-top: 10px;
@@ -287,45 +278,52 @@ ion-icon {
 	display: flex;
 	margin-top: 0.5%;
 	justify-content: center;
-	font-size: 30px;
+	font-size: 40px;
 	font-family: 'Arvo', serif;
-	color: #ff4742;
-	font-weight: 800;
+	/* color: #ff4742; */
+	font-weight: 900;
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: #761512;
-	/* color: var(--main-red);
-	-webkit-text-stroke-width: 1.5px;
-	-webkit-text-stroke-color: black; */
-}
-
-.catering-title {
-	text-transform: capitalize;
-	color: white;
-	font-size: 35px;
-	font-weight: 500;
-	font-family: 'Montserrat', serif;
-	color: #333;
+	color: var(--main-red);
 }
 
 .price {
 	font-weight: 300;
 }
 
-.menu-heading p {
-	color: rgb(109, 109, 109);
-	font-size: 1.15rem;
-}
-
 .menu-heading {
 	display: flex;
 	flex-direction: column;
 	place-content: center;
-	transform: translatey(100%);
+	transform: translatey(5rem);
 	margin-left: 10%;
+	background-color: white;
+	width: 900px;
+	padding: 40px 30px;
+	border-radius: 8px;
+	border: solid red;
+	border-width: 4px;
+}
+
+.catering-title {
+	text-transform: capitalize;
+	color: white;
+	font-size: 40px;
+	font-weight: 600;
+	font-family: 'Rum Raisin', serif;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	color: var(--main-red);
+}
+
+.menu-heading p {
+	color: rgb(109, 109, 109);
+	font-size: 1.2rem;
+	font-family: 'Quicksand', sans-serif;
 }
 
 .menu-heading a {
-	color: #ff4742;
+	color: var(--main-red);
 	font-weight: 400;
 	text-decoration: none;
 }
@@ -338,8 +336,8 @@ ion-icon {
 .title-style {
 	display: flex;
 	justify-content: left;
-	margin-left: 10%;
-	transform: translatey(300%);
+	margin-left: 11%;
+	transform: translatey(220%);
 }
 
 .items-container {
@@ -349,6 +347,7 @@ ion-icon {
 	margin-left: 10rem;
 	margin-right: 10rem;
 	margin-top: 10%;
+	padding-bottom: 1rem;
 }
 
 .card-bottom {
@@ -359,10 +358,10 @@ ion-icon {
 	display: flex;
 	flex-direction: row;
 	background-color: white;
+	padding-left: 10px;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s ease;
-	/* width: 30rem; */
 	width: 90%;
 	height: 13rem;
 	margin-right: 5rem;
@@ -380,8 +379,8 @@ ion-icon {
 	display: block;
 	position: absolute;
 	/* transform: translateY(220%); */
-	background: #ff4742;
-	border: 1px solid #ff4742;
+	background: var(--main-red);
+	border: 1px solid var(--main-red);
 	border-radius: 6px;
 	box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
 	color: #ffffff;
@@ -412,6 +411,7 @@ ion-icon {
 .item-info img {
 	height: 5rem;
 	width: 5rem;
+	object-fit: fill;
 }
 
 .item-info p {
