--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -108,8 +108,10 @@ button{
 /* ---------------------------------------------------- */
 .page-container {
   display: flex;
+  overflow: hidden;
   width: 100%;
-  height: 855px;
+  height:auto;
+  max-height: 123.8vh;
   gap: 2%;
 }
 /* -------------------------------- */
@@ -122,6 +124,7 @@ button{
   padding: 1%;
   background-color: hsl(0, 0%, 90%);
   width: 45%;
+  max-height: 99.8vh;
   box-shadow: -2px 4px 4px #00000030, -5px 12px 12px #00000015;
 }
 .Final-Cart-Content {
@@ -236,8 +239,9 @@ button{
   border:none;
   background-color: hsl(0, 0%, 90%);
   height:100%;
-
-  
+}
+#Discount{
+  display: none;
 }
 .tipbtncontainer{
   display: flex;
