--- a/receipt.css
+++ b/receipt.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Roboto', sans-serif;
   /* background-color: var(--background-white); */
   /* background-color: var(white); */
-  background-image: url("media/lphbackground.webp");
+  background-image: url("LosPollosImages-gif/lphbackground.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #ede2cd;
