--- a/receipt.css
+++ b/receipt.css
@@ -245,7 +245,7 @@ footer {
   gap: 20px;
 }
 
-.cta-button {
+#cta-button {
   padding: 12px 25px;
   background-color: var(--secondary-red);
   color: white;
@@ -253,10 +253,13 @@ footer {
   border-radius: 30px;
   font-weight: 600;
   text-align: center;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  border:none;
 }
 
-.cta-button:hover {
+#cta-button:hover {
   background-color: #ba0425;
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
 }
 
