--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -7,21 +7,38 @@
 	box-sizing: border-box;
 }
 
+h1 {
+	font-family: 'Lato', serif;
+	font-weight: 500;
+	font-style: normal;
+	/* color: var(--main-red); */
+}
+
 h3 {
-	font-family: 'Goblin One', serif;
+	/* font-family: 'Goblin One', serif; */
+	font-family: 'Lato', serif;
 	font-weight: 400;
 	font-style: normal;
 }
 h5 {
-	font-family: 'Goblin One', serif;
+	font-family: 'Lato', serif;
+	font-size: 1.3rem;
 	font-weight: 400;
 	font-style: normal;
 }
+
+h6 {
+	font-size: 0.9rem;
+	font-family: 'Lato', serif;
+	font-weight: 500;
+}
+
 p {
 	font-family: 'Lato', serif;
 	font-weight: 400;
 	font-style: normal;
 }
+
 a {
 	font-family: 'Lato', serif;
 	font-weight: 600;
@@ -31,6 +48,11 @@ button {
 	font-family: 'Lato', serif;
 	font-weight: 700;
 	font-style: normal;
+}
+
+:root {
+	--ui-grey: #c5c5c5;
+	--main-red: #f2022f;
 }
 /* ---------------------------------------------------- */
 /* -------          Header Section            --------- */
@@ -78,7 +100,9 @@ button {
 	padding: 10px;
 }
 #Searchbar::placeholder {
-	color: hsl(0, 0%, 70%);
+	/* color: hsl(0, 0%, 70%); */
+	color: white;
+	font-weight: 500;
 }
 #Searchbar:focus {
 	outline: none;
@@ -111,7 +135,8 @@ button {
 .page-container {
 	display: flex;
 	width: 100%;
-	height: 855px;
+	height: 100%;
+	background-color: hsl(0, 0%, 95%);
 	gap: 2%;
 }
 /* -------------------------------- */
@@ -122,8 +147,11 @@ button {
 	flex-direction: column;
 	align-items: center;
 	padding: 1%;
-	background-color: hsl(0, 0%, 90%);
+	/* background-color: hsl(0, 0%, 90%); */
+	background-color: white;
 	width: 45%;
+	height: 100%;
+	margin-top: 2%;
 	box-shadow: -2px 4px 4px #00000030, -5px 12px 12px #00000015;
 }
 .Final-Cart-Content {
@@ -142,6 +170,9 @@ button {
 	flex-direction: row;
 	height: 100%;
 	column-gap: 50px;
+	margin-left: 6%;
+	font-family: 'Arvo', serif;
+	/* color: #f2022f; */
 	/* justify-content: space-around; */
 }
 .Item-Qty-Price-List {
@@ -155,6 +186,7 @@ button {
 #Item-img {
 	width: 40%;
 	height: 100px;
+	object-fit: contain;
 }
 #I {
 	width: 50%;
@@ -185,36 +217,52 @@ button {
 	display: flex;
 	width: 100%;
 	gap: 20px;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid var(--ui-grey);
 	padding-bottom: 20px;
 }
 .remove-btn {
 	display: flex;
 	justify-content: center;
-	padding: 15px;
 	font-family: 'Lato', serif;
 	font-weight: 700;
+	font-size: 20px;
 	font-style: normal;
-	background-color: #f20530;
+	content: '';
+	color: var(--ui-grey);
+	background-color: transparent;
 	border: none;
-	width: 120px;
-	height: 50px;
-	border-radius: 20px;
-	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
+	height: 20px;
+	width: 20px;
+	/* color: white; */
+	/* background-color: #f20530; */
+	/* width: 20px; */
+	/* padding: 15px; */
+	/* padding: 10px; */
+	/* padding: 10px; */
+	/* width: 120px; */
+	/* height: 50px; */
+	/* border-radius: 20px; */
+	/* box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015; */
 }
 .remove-btn:hover {
-	transform: translateY(-10px);
+	cursor: pointer;
+	/* transform: translateY(-10px);
 	transition: all 0.7s;
-	background-color: hsl(349, 96%, 58%);
+	background-color: hsl(349, 96%, 58%); */
 }
 /* -------------------------------- */
 /* ------- Payment Section -------- */
 /* -------------------------------- */
 .Payment-Info-Container {
 	display: flex;
-	background-color: hsl(0, 0%, 95%);
+	/* background-color: hsl(0, 0%, 95%); */
+	background-color: white;
 	padding: 1.5%;
 	width: 60%;
+	height: 100%;
+	padding-bottom: 20px;
+	margin-bottom: 5%;
+	margin-top: 2%;
 }
 .Payment-Info-Content {
 	display: flex;
@@ -222,53 +270,99 @@ button {
 	width: 100%;
 	gap: 25px;
 }
-.name-Container {
+.name-Container,
+.Email-Container,
+.City-State {
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
 }
+
+.optionalTip-container h5 {
+	font-size: 1rem;
+}
+
 .Contact-Info-Content,
 .optionalTip-container,
-.PaymentMethod-Container {
+.PaymentMethod-Container,
+.Summary-Container {
 	display: flex;
 	flex-direction: column;
 	row-gap: 20px;
+	margin-top: 30px;
 }
 
 .Name,
 #Email,
 #CardName,
 #CardNumber,
-#CVV,
 #ExpDate,
-#CouponID {
-	border-radius: 10px;
-	padding: 0.8%;
-	border: none;
-	background-color: hsl(0, 0%, 90%);
-	height: 100%;
+#CouponID,
+#Phone,
+#StreetAddress,
+#AddressLine2,
+#City,
+#State,
+#ZipCode {
+	border-radius: 6px;
+	padding: 5px;
+	border: 1px solid var(--ui-grey);
+	/* background-color: hsl(0, 0%, 90%); */
+	/* height: 100%; */
+	height: fit-content;
+	font-size: 1rem;
 }
+
+.star {
+	color: red;
+}
+
 .tipbtncontainer {
 	display: flex;
 	flex-direction: row;
-	gap: 5%;
+	gap: 3%;
 }
-.tip-btn,
+.tip-btn {
+	display: flex;
+	justify-content: center;
+	text-wrap: wrap;
+	padding: 6px;
+	font-size: 16px;
+	overflow: hidden;
+	text-align-last: center;
+	width: 60px;
+	border: none;
+	background-color: #f2e205;
+	font-weight: 500;
+	border-radius: 20px;
+}
+
 .CouponSubmit {
 	display: flex;
 	justify-content: center;
-	padding: 1%;
-	width: 10%;
+	text-align: center;
+	padding: 10px;
+	width: 14%;
 	border: none;
 	background-color: #f2e205;
 	border-radius: 20px;
 }
+
+#StreetAddress,
+#AddressLine2 {
+	width: 48%;
+}
+
+.AddressLine2 {
+	margin-top: 15px;
+}
+
 .tip-btn:hover,
 .CouponSubmit:hover {
 	transform: translateY(-2px);
 	background-color: hsl(56, 96%, 58%);
-	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
-	transition: all 0.7s;
+	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000000;
+	transition: all 0.3s;
 }
 .Couponcontainer {
 	display: flex;
@@ -300,25 +394,44 @@ button {
 .Exp-Cvv-Container {
 	display: flex;
 	/* justify-content: center; */
-	column-gap: 20px;
+	/* column-gap: 20px; */
 }
 .Exp-Cvv-Container input {
+	display: flex;
 	width: 50%;
 }
 .Exp {
-	width: 40%;
+	width: 300%;
+}
+
+#CVV {
+	border-radius: 6px;
+	padding: 3px;
+	border: 1px solid var(--ui-grey);
+	/* background-color: hsl(0, 0%, 90%); */
+	/* height: 100%; */
+	height: fit-content;
+	width: 50px;
+	font-size: 1rem;
 }
 .Cvv {
-	width: 25%;
+	width: 100%;
 }
 #PlaceOrderBtn {
 	display: flex;
 	text-align: center;
 	background-color: #f20530;
+	color: white;
 	width: 15%;
 	border-radius: 20px;
 	border: none;
-	padding: 1%;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-right: 5px;
+	padding-left: 5px;
+	margin-top: 1.5%;
+	text-wrap: nowrap;
+	font-size: 1.1rem;
 	justify-content: center;
 }
 #PlaceOrderBtn:hover {
@@ -356,3 +469,32 @@ footer ion-icon {
 	display: flex;
 	gap: 20px;
 }
+
+/* -------------------------------- Card SVG -------------------------------- */
+
+.creditcards {
+	display: flex;
+	place-content: left;
+
+	.icon {
+		flex-direction: row;
+		margin-right: 1em;
+		width: 20px;
+		height: 20px;
+		background-color: black;
+	}
+}
+
+.payment-title {
+	display: grid;
+	grid-template-columns: (2fr, 1);
+}
+
+.payment-title h5 {
+	flex-wrap: nowrap;
+	width: max-content;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                           Delivery Toggle Button                           */
+/* -------------------------------------------------------------------------- */
